--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciasalariales.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3d8ea19-1295-4cd5-beff-28727f321760">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="2"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
@@ -61,21 +61,21 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 			<staticText>
 				<reportElement x="145" y="20" width="282" height="20" uuid="92646f55-b86a-406f-b483-3937bdd29a9a"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="12" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia y Seguridad Publica]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="209" y="63" width="129" height="20" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
+				<reportElement x="209" y="56" width="129" height="20" uuid="598b059c-c836-4d9a-9f00-aa02191a6297"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="12" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="161" y="43" width="240" height="20" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
+				<reportElement x="161" y="38" width="240" height="20" uuid="ff0ff36a-d21b-48a0-8a36-d2f2e3e11abd"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="12" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
@@ -94,49 +94,72 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 			<staticText>
 				<reportElement x="0" y="8" width="572" height="20" uuid="ce3f3878-6d02-4709-a00e-5a40b03d9145"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Constancia Salarial]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="426" y="35" width="64" height="20" uuid="1c634514-dc50-40e0-bce0-51abeda387cb"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement x="490" y="35" width="40" height="20" uuid="07d33278-4802-4c35-87d1-e03ac665e740"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="470" y="12" width="100" height="20" uuid="1d302d02-d934-453e-8f10-74156b845839"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="432" y="12" width="35" height="20" uuid="88e9db8a-3a8b-4174-91e8-ad4201c9bf97"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="147" y="31" width="29" height="20" uuid="2a809ba7-8a89-4d40-81ff-a2d55dd8ad25"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="306" y="32" width="31" height="20" uuid="b0cf2130-63f4-45e8-9c29-55570e8b5584"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="183" y="32" width="100" height="20" uuid="cec00a1a-473f-4dee-a80c-21eb6d7f70ac"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="341" y="32" width="100" height="20" uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd"/>
+				<reportElement x="338" y="32" width="100" height="20" uuid="7a7b72cb-e892-4d64-b4e5-84f70380a4fd"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="19" y="14" width="100" height="20" uuid="1d7ad94a-214c-4e90-b6eb-4b830f604906"/>
 				<textElement>
-					<font size="12"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[rpt_csal]]></text>
+				<text><![CDATA[rpt_reporte_csal]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="431" y="57" width="42" height="20" uuid="4b109aed-7271-45d4-b9b1-0227aad37ce0"/>
@@ -156,7 +179,7 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 			<staticText>
 				<reportElement x="282" y="116" width="100" height="20" uuid="e004377a-c5ea-46bf-940f-bfcd9e7685dc"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Descuento]]></text>
 			</staticText>
@@ -165,23 +188,29 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 			</line>
 			<staticText>
 				<reportElement x="180" y="169" width="100" height="20" uuid="0cdb6712-c165-463e-8e83-6a22ecbc0c84"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Monto Descuento]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="180" y="141" width="100" height="20" uuid="a3439be5-e605-4b53-b034-45d1b167f008"/>
-				<textElement verticalAlignment="Middle"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Salario Actual]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="282" y="169" width="100" height="20" uuid="18c6fd7e-5247-43e3-b496-770ef22384f9"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{montodescuento}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="180" y="116" width="100" height="20" uuid="fdb1d39f-bb97-46d1-a24f-a8c673951780"/>
 				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Detalle]]></text>
 			</staticText>
@@ -191,32 +220,36 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" x="50" y="250" width="475" height="74" isPrintWhenDetailOverflows="true" uuid="d21a7162-7986-4e38-9d01-f7681747e4e3"/>
 				<textElement textAlignment="Justified" markup="html">
-					<font size="12"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Y para ser presentado a <b>"+$F{nombreinstitucion}+"</b> se extiende la presente, La cual tendrá validez en original, sin tachaduras por un periodo de treinta días dada en la ciudad de San Salvador,"+ new SimpleDateFormat("MM/dd/yyyy").format(new java.util.Date())+" DIOS UNION LIBERTAD"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="282" y="202" width="100" height="20" uuid="e6b0a571-a1c9-42ec-88d8-24f0c0dbe765"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Total}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement mode="Transparent" x="180" y="202" width="100" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="7a743dfd-8c94-4e26-b6c2-241b088a543f"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None" markup="none">
-					<font fontName="SansSerif" size="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<font fontName="Times New Roman" size="9" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 					<paragraph lineSpacing="Single"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="282" y="141" width="100" height="20" uuid="cc041996-fd55-47b2-817e-9ec97e909145"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" isPrintRepeatedValues="false" x="50" y="0" width="475" height="98" isPrintWhenDetailOverflows="true" uuid="df0bfe9e-d471-405e-a95b-a0d45a2f9db2"/>
 				<textElement textAlignment="Justified" markup="html">
-					<font size="12"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Hace constar que <b>"+$F{nombreempleado}+"</b> presta servicios para esta institución desde <b>" +$F{fechainiciocontrato}+"</b> hasta <b>"+ $F{fechafincontrato}+ "</b> ambas fechas inclusive, nombrado por el sistema de pago <b>"+$F{sistemapago}+"</b> En plaza Nominal <b>"+$F{plazanominal}+"</b> devengando un salario mensual de <b>$"+$F{salarioactual}+"</b> A quien se le efectúan los siguientes descuentos:<br/><br/>"]]></textFieldExpression>
 			</textField>
@@ -229,6 +262,9 @@ c.fechafincontrato <= $P{FECHAFIN}]]>
 		<band height="42" splitType="Stretch">
 			<staticText>
 				<reportElement x="178" y="3" width="199" height="20" uuid="a904b1d4-d690-45ac-8066-9b4ccd020c67"/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
 				<text><![CDATA[Derechos Reservados  UES/FIA/ESISI]]></text>
 			</staticText>
 		</band>
