--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_historial.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_historial.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="101"/>
+	<property name="ireport.y" value="84"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="CODIGO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -58,14 +58,23 @@ e.codigoempleado=$P{CODIGO}]]>
 		<band height="105" splitType="Stretch">
 			<staticText>
 				<reportElement x="316" y="30" width="260" height="20" uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[MINISTERIO DE JUSTICA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="335" y="13" width="222" height="20" uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="389" y="50" width="84" height="20" uuid="4029d439-49b0-4518-9158-407c5b425ee8"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
@@ -81,56 +90,88 @@ e.codigoempleado=$P{CODIGO}]]>
 	<pageHeader>
 		<band height="75" splitType="Stretch">
 			<textField>
-				<reportElement x="669" y="22" width="80" height="20" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="637" y="22" width="80" height="20" uuid="50d7697d-bd9e-42e2-829d-5dfaaf1c7d49"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="749" y="22" width="40" height="20" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
+				<reportElement x="717" y="22" width="40" height="20" uuid="d63d0eb3-1543-473d-a0be-53844c71f01f"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="337" y="4" width="175" height="20" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Reporte de Historial Laboral de Empleados ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="251" y="42" width="43" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
+				<reportElement x="251" y="37" width="43" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="457" y="42" width="38" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
+				<reportElement x="457" y="37" width="38" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="695" y="4" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
+				<reportElement x="699" y="4" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="294" y="42" width="100" height="20" uuid="2ebcc166-3c13-4511-8e87-0f8d96307534"/>
+				<reportElement x="294" y="37" width="100" height="20" uuid="2ebcc166-3c13-4511-8e87-0f8d96307534"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="495" y="42" width="100" height="20" uuid="53bc6c9c-518e-442a-b11d-63842970632b"/>
+				<reportElement x="495" y="37" width="100" height="20" uuid="53bc6c9c-518e-442a-b11d-63842970632b"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="669" y="42" width="42" height="20" uuid="0469fd21-afc9-4942-91ac-42de367c1291"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="711" y="42" width="85" height="20" uuid="4867b952-ff3f-448d-87ee-ad61bd11e47e"/>
 				<textElement>
-					<font size="12"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="646" y="2" width="38" height="20" uuid="2f6f1add-635e-48f9-acaf-78d89a56a2fe"/>
+				<reportElement x="664" y="4" width="38" height="20" uuid="2f6f1add-635e-48f9-acaf-78d89a56a2fe"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="21" y="48" width="100" height="20" uuid="ddad01b0-d666-404f-bb79-6149f97a612a"/>
-				<text><![CDATA[rpt_hist]]></text>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[rpt_reporte_hlem]]></text>
 			</staticText>
 		</band>
 	</pageHeader>
@@ -140,27 +181,45 @@ e.codigoempleado=$P{CODIGO}]]>
 				<reportElement x="2" y="2" width="794" height="20" uuid="c57e2d9e-8f00-4ba7-a90e-32cc6e727163"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="2" y="0" width="117" height="20" uuid="7e48898a-1475-4ed7-8f5c-1b0cb9669341"/>
+				<reportElement x="2" y="0" width="137" height="20" uuid="7e48898a-1475-4ed7-8f5c-1b0cb9669341"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Nombre de empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="151" y="0" width="100" height="20" uuid="de05b416-f450-450e-9a71-e275c6d175cd"/>
+				<reportElement x="151" y="0" width="125" height="20" uuid="de05b416-f450-450e-9a71-e275c6d175cd"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Nombre de Puesto]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="294" y="0" width="86" height="20" uuid="1b38ed4d-db4c-4238-b75f-aa9194feee9a"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Sueldo Base]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="409" y="0" width="86" height="20" uuid="6add28a2-4948-4e1c-9a2b-2f23dd7335ca"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Sueldo final]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="528" y="0" width="121" height="20" uuid="a1e8b592-2b67-45f9-ac83-75b897bb913a"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Fecha de contratacion]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="688" y="0" width="114" height="20" uuid="f7065383-1312-4dd5-8597-396b669d1b07"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Fecha de finalizacion]]></text>
 			</staticText>
 			<line>
@@ -183,27 +242,45 @@ e.codigoempleado=$P{CODIGO}]]>
 	<detail>
 		<band height="25" splitType="Stretch">
 			<textField>
-				<reportElement x="2" y="0" width="117" height="20" uuid="ba926ae7-2f74-4690-8f31-4becf5e5b2bb"/>
+				<reportElement x="2" y="0" width="137" height="20" uuid="ba926ae7-2f74-4690-8f31-4becf5e5b2bb"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="140" y="0" width="111" height="20" uuid="9225867d-e615-4135-b591-459d852df725"/>
+				<reportElement x="140" y="0" width="136" height="20" uuid="9225867d-e615-4135-b591-459d852df725"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="289" y="0" width="91" height="20" uuid="f33734f0-d5ac-4731-b5c5-548952b0c747"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{sueldobase}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="409" y="0" width="100" height="20" uuid="a5509c64-7e35-433c-aae5-6438ce227ec0"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{sueldotopepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="528" y="5" width="118" height="20" uuid="05a15696-7076-45cb-802d-0d55a70ab4e4"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fechacontrataciondesde}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="697" y="5" width="100" height="20" uuid="98797912-3e86-495f-b045-478da6e09680"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fechacontratacionhasta}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -222,17 +299,22 @@ e.codigoempleado=$P{CODIGO}]]>
 		<band height="42" splitType="Stretch">
 			<textField>
 				<reportElement x="649" y="6" width="80" height="20" uuid="414c12b5-bf5e-47e4-846d-607e2c1626a0"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement x="729" y="6" width="40" height="20" uuid="316ce86a-a98a-43ff-8585-bc1380d26aac"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="###0">
 				<reportElement mode="Opaque" x="2" y="3" width="555" height="13" backcolor="#FFFFFF" uuid="a2630314-9f83-4d26-b287-ed5d193c58f1"/>
 				<textElement>
-					<font fontName="Times New Roman" isUnderline="false"/>
+					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
