--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_motoristas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_motoristas.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="77"/>
-	<property name="ireport.y" value="22"/>
+	<property name="ireport.zoom" value="2.1435888100000016"/>
+	<property name="ireport.x" value="521"/>
+	<property name="ireport.y" value="446"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -43,15 +43,24 @@
 	<title>
 		<band height="90" splitType="Stretch">
 			<staticText>
-				<reportElement x="310" y="33" width="246" height="20" uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42"/>
+				<reportElement x="310" y="33" width="228" height="20" uuid="a0dbe5a9-0228-4d87-aec6-d782086fdf42"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[MINISTERIO DE JUSTICA Y SEGURIDAD PUBLICA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="326" y="17" width="222" height="20" uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42"/>
+				<reportElement x="326" y="17" width="187" height="20" uuid="db6f5eb3-86ed-4034-ba10-eab3fd2e2b42"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="376" y="49" width="84" height="20" uuid="4029d439-49b0-4518-9158-407c5b425ee8"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
@@ -68,54 +77,86 @@
 		<band height="98" splitType="Stretch">
 			<staticText>
 				<reportElement x="351" y="7" width="113" height="20" uuid="deab7866-efc6-4654-b9e0-af062f2ca3ce"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Reporte de Motoristas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="197" y="35" width="44" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
+				<reportElement x="220" y="35" width="31" height="20" uuid="1ba3c303-1161-4e5d-8141-8f4747ee1c73"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="457" y="42" width="40" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="497" y="42" width="100" height="20" uuid="8ab75876-80ee-4d3e-8042-58f322695998"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="695" y="11" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="251" y="35" width="100" height="20" uuid="444789e4-36d6-48a7-aa94-5a0d710aad34"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="649" y="11" width="43" height="20" uuid="883df247-75ef-4008-b640-715c4d177483"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="652" y="47" width="43" height="20" uuid="89b09c93-0548-4f44-95b5-1a54c3a0b028"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Usuario]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="697" y="47" width="85" height="20" uuid="5c5e7dbb-9f8a-46df-8e2c-cc2e539829d0"/>
 				<textElement>
-					<font size="10"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="19" y="35" width="100" height="20" uuid="c01a534d-c09e-4cc7-914d-7ce42a1e9802"/>
-				<text><![CDATA[rpt_mtrs]]></text>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[rpt_reporte_mact]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="630" y="29" width="80" height="20" uuid="e2a2e4cd-d2df-4333-b025-655f9baa2303"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement x="710" y="29" width="40" height="20" uuid="78cd49e8-527e-4398-befe-a048a0b749c8"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -127,14 +168,23 @@
 			</rectangle>
 			<staticText>
 				<reportElement x="119" y="0" width="132" height="20" uuid="45933b9f-8ac2-4df1-a559-c0d867795b56"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Codigo de Empleado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="335" y="0" width="122" height="20" uuid="42e93400-ab2e-4d3a-b579-c5c1dba947a6"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Nombre de Empleado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="555" y="0" width="180" height="20" uuid="5f6e7b56-d32d-41ee-8c48-3da2659baf94"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<text><![CDATA[Fecha de aprobación]]></text>
 			</staticText>
 			<line>
@@ -149,14 +199,23 @@
 		<band height="23" splitType="Stretch">
 			<textField>
 				<reportElement x="119" y="0" width="100" height="20" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="335" y="0" width="100" height="20" uuid="1a8282f8-9255-4a06-9e33-7690f1ed0c42"/>
+				<reportElement x="335" y="0" width="162" height="20" uuid="1a8282f8-9255-4a06-9e33-7690f1ed0c42"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="566" y="0" width="100" height="20" uuid="d2cd28fb-fd1d-4fcb-8fd6-d975679cc690"/>
+				<reportElement x="561" y="0" width="145" height="20" uuid="d2cd28fb-fd1d-4fcb-8fd6-d975679cc690"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fechaingresoministerio}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -166,17 +225,22 @@
 			<textField isStretchWithOverflow="true" pattern="###0">
 				<reportElement mode="Opaque" x="19" y="14" width="555" height="13" backcolor="#FFFFFF" uuid="c211ce2a-7249-42b6-8606-b43ce21bd549"/>
 				<textElement>
-					<font fontName="Times New Roman" isUnderline="false"/>
+					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="629" y="14" width="80" height="20" uuid="414c12b5-bf5e-47e4-846d-607e2c1626a0"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Pinga "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="709" y="12" width="40" height="20" uuid="316ce86a-a98a-43ff-8585-bc1380d26aac"/>
+				<reportElement x="711" y="13" width="51" height="20" uuid="316ce86a-a98a-43ff-8585-bc1380d26aac"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<line>
@@ -185,7 +249,15 @@
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="35" splitType="Stretch"/>
+		<band height="35" splitType="Stretch">
+			<staticText>
+				<reportElement x="309" y="7" width="185" height="20" uuid="7d036edd-2446-4668-8af5-90b70bb870c9"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Derechos Reservados FIA/UES/EISI]]></text>
+			</staticText>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
